fix: right align how to apply button

--- a/style.css
+++ b/style.css
@@ -782,6 +782,7 @@ ul {
   font-size: 14px !important;
   font-weight: 600 !important;
   text-decoration: none !important;
+  float: right;
 }
 
 .nav-wrapper a {
