--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -132,6 +132,7 @@ $header-height: 52px;
   font-size: 14px !important;
   font-weight: 600 !important;
   text-decoration: none !important;
+  float: right;
 }
 
 .nav-wrapper {
